# codehood

./: .gitignore  README.md  mprocs.yaml
apitest/: bruno.json  login-student.bru
cli/: README.md  codehood.toml  pyproject.toml
cli/codehood_cli/: __main__.py  api.py  classroom.py  cli.py  config.py  data.py  errors.py
cli/codehood_cli/cli/: __init__.py  add.py
cli/compilers/2025-2/: P1.md  classroom.toml  schedule.md
django-katana/: mypy.ini  pyproject.toml  ruff.toml
django-katana/examples/: mypy.ini
django-katana/examples/pjrpc-site/app/: settings.py
django-katana/src/katana/: __init__.py  apps.py  conf.py  core.py  decorators.py  errors.py  openapi_schema.py  operation.py  router.py  signature.py  sites.py  types.py
django-shuriken/: pyproject.toml
django-shuriken-new/: README.md  pyproject.toml
django-shuriken-new/examples/employee/: README.md  pyproject.toml
django-shuriken-new/examples/employee/src/employee/: __init__.py
django-shuriken-new/src/shuriken/: __init__.py  conf.py  router.py
django-shuriken/src/shuriken/: api.py  apps.py  core.py  utils.py
django-shuriken/src/shuriken/controllers/: base.py  rest.py
frontend/: .gitignore  README.md  elm-land.json  elm.json  mprocs.yaml  package-lock.json  package.json
frontend/.github/instructions/: daisyui.instructions.md
frontend/_Question/: Answer.elm  Base.elm  Choice.elm  Essay.elm  FillIn.elm  Pairings.elm  _Question.elm
frontend/codegen/: DaisyUi.elm  LogDebug.elm  LogNoDebug.elm
frontend/review/: elm.json
frontend/src/: Api.elm  Auth.elm  Effect.elm  Form.elm  Shared.elm  Ui.elm  Util.elm  Validators.elm  interop.js  main.css
frontend/src/Api/: Auth.elm  Classrooms.elm  Disciplines.elm  Error.elm  Exams.elm  Files.elm  Task.elm
frontend/src/Components/: Directory.elm  Discipline.elm  EditProfile.elm  EditProfile2.elm  Empty.elm  Exam.elm  ExamIndex.elm  Footer.elm  Header.elm  Home.elm  LandingPage.elm  Login.elm  ProfilePanel.elm  Question.elm  Register.elm  SettingsPanel.elm
frontend/src/Data/: Answer.elm  Classroom.elm  Credentials.elm  Datetime.elm  Discipline.elm  Duration.elm  Exam.elm  ExamConf.elm  Files.elm  Language.elm  Link.elm  Menu.elm  Navbar.elm  Path.elm  Question.elm  RegisterUser.elm  Schedule.elm  SimpleUser.elm  User.elm
frontend/src/Data/Question/: Base.elm  ChoiceBase.elm  Code.elm  Essay.elm  FillIn.elm  MultipleChoice.elm  MultipleSelection.elm  Pairings.elm  TrueFalse.elm  Type.elm
frontend/src/Effect/: Layout.elm
frontend/src/Elements/: Classroom.elm  Directory.elm  Discipline.elm  Empty.elm  Exam.elm  ExamIndex.elm  Footer.elm  Home.elm  LandingPage.elm  Question.elm  Register.elm
frontend/src/Layouts/: Main.elm
frontend/src/Pages/: Discipline_.elm  Home_.elm
frontend/src/Pages/Auth/: Login.elm  Register.elm
frontend/src/Shared/: Model.elm  Msg.elm
frontend/src/Ui/: Cards.elm  Classroom.elm  Container.elm  Exam.elm  Icons.elm  Svg.elm
frontend/src/Util/: EnumDecode.elm  Lens.elm
frontend/static/: manifest  sw.js
mdq/: LICENSE  README.md  example.py  pyproject.toml  requirements.txt
mdq-pydantic/: base.json  basequestion.py  main.py  mdq.py  pyproject.toml
mdq-pydantic/mdq_pydantic/: __init__.py
mdq-spec/: .gitignore  README.md  foo.spec  package-lock.json  package.json  pyproject.toml  tasks.py  test.json
mdq-spec/elm/: elm.json  index.html  package-lock.json  package.json  vite.config.ts
mdq-spec/elm/src/: main.js
mdq-spec/elm/src/Mdq/: App.elm  Json.elm  Question.elm  Types.elm  Ui.elm
mdq-spec/elm/src/Mdq/Components/: MultipleChoice.elm
mdq-spec/examples/: simple.yaml
mdq-spec/mdq/: models.py
mdq-spec/mdq/cli/: __init__.py  transforms.py
mdq-spec/mdq/data/: __init__.py  base_question.py
mdq-spec/mdq/schema/: check-examples.py  gen-schema.py  openapi.py  transforms.py
mdq-spec/schemas/: associative.yml  base-choice.yml  base-options.yml  base-programming-question.yml  base-question.yml  code-io.yml  essay.yml  fill-in.yml  mdq.yml  multiple-choice-item.yml  multiple-choice.yml  multiple-selection.yml  true-false.yml  unit-test.yml
mdq/docs/mdq/: index.html  questions.html
mdq/examples/: exam-a.md  multiple-choice-1.q.md
mdq/mdq/: __init__.py  errors.py  parser.py  types.py  utils.py
mdq/mdq/models/: __init__.py  base.py  enums.py  exam.py  question.py  response.py  shared.py
mdq/src/mdq/: __init__.py  exam.py  parser.py  utils.py
mdq/src/mdq/questions/: __init__.py  multiple_choice.py  question.py
mdq/tests/: conftest.py  test_parser.py
server/: .gitignore  .pyup  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTOR.md  LICENSE.txt  README.rst  mypy.ini  pyproject.toml  result  ruff.toml  schema.json  tasks.py  tox.ini
server/codehood/: __init__.py  api.py  conftest.py  constants.py  factories.py  fields.py  markdown.py  models.py  rules.py  teapot.py  text.py  types.py  utils.py
server/codehood/apiauth/: __init__.py  admin.py  apps.py  models.py
server/codehood/cfg/: apps.py
server/codehood/cfg/management/commands/: populate_db.py
server/codehood/classrooms/: admin.py  apps.py  fixtures.py  models.py  rules.py  util.py  validators.py
server/codehood/classrooms/api/: __init__.py  classrooms.py  disciplines.py  schemas.py
server/codehood/exams/: admin.py  api.py  apps.py  fixtures.py  models.py  rules.py  schemas.py
server/codehood/files/: __init__.py  api.py  apps.py
server/codehood/passphrases/: admin.py  apps.py  models.py  utils.py
server/codehood/profiles/: __init__.py  admin.py  api.py  apps.py  models.py  signals.py
server/codehood/questions/: admin.py  apps.py  fixtures.py  models.py
server/codehood/schedules/: admin.py  api.py  apps.py  fixtures.py  models.py
server/codehood/scripts/: dev.py
server/codehood/submissions/: apps.py  models.py
server/codehood/users/: __init__.py  admin.py  api.py  apps.py  factories.py  fixtures.py  forms.py  models.py  rpc.py  rules.py  validators.py
server/config/: asgi.py  celery_app.py  urls.py  wsgi.py
server/config/settings/: __init__.py  base.py  deploy.py  dev.py  testing.py
(+6 files in other folders)
