[project]
name = "codehood-cli"
version = "0.1.0"
description = "Interacts with a Codehood server to submit files, sync courses, exams etc."
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "rich>=14.0.0",
 "rich-click>=1.8.8",
 "tomlkit>=0.13.2",
 "trogon>=0.6.0",
]

[project.urls]
github = "http://github.com/codehood-lms/codehood-cli"

[project.scripts]
"codehood" = "codehood_cli.cli:main"
