[project]
name = "codehood-cli"
version = "0.1.0"
description = "Interacts with a Codehood server to submit files, sync courses, exams etc."
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "rich>=14.0.0",
    "tomlkit>=0.13.2",
    "typer>=0.19.2",
]
authors = [{ name = "Fabio Mendes", email = "fabiommendes@gmail.com" }]

[project.urls]
github = "http://github.com/fabiommendes/codehood"

[project.scripts]
ch = "codehood_cli.cli:main"

[tool.uv]
package = true
